# docs/swagger.json
@@ -100,6 +100,94 @@
                 }
             }
         },
+        "/me/ratings": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ratings"
+                ],
+                "summary": "Listar MIS ratings",
+                "responses": {}
+            },
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ratings"
+                ],
+                "summary": "Crear/actualizar mis ratings",
+                "parameters": [
+                    {
+                        "description": "rating",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.ratingRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            }
+        },
+        "/me/recommendations": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "recommend"
+                ],
+                "summary": "Mis recomendaciones",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "cantidad de recomendaciones (máx 50)",
+                        "name": "k",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "si true, ignora cache Redis",
+                        "name": "refresh",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.RecItem"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/movies/search": {
             "get": {
                 "produces": [
@@ -232,7 +320,7 @@
                 "tags": [
                     "ratings"
                 ],
-                "summary": "Listar ratings del usuario",
+                "summary": "Listar ratings de un usuario (ADMIN)",
                 "parameters": [
                     {
                         "type": "integer",
@@ -251,7 +339,7 @@
                 "tags": [
                     "ratings"
                 ],
-                "summary": "Crear/actualizar rating",
+                "summary": "Crear/actualizar rating (ADMIN)",
                 "parameters": [
                     {
                         "type": "integer",
@@ -285,7 +373,7 @@
                 "tags": [
                     "recommend"
                 ],
-                "summary": "Recomendaciones para un usuario",
+                "summary": "Recomendaciones para un usuario (ADMIN)",
                 "parameters": [
                     {
                         "type": "integer",
@@ -388,7 +476,7 @@
                 "tags": [
                     "recommend"
                 ],
-                "summary": "Recomendaciones en tiempo real (WebSocket)",
+                "summary": "Recomendaciones en tiempo real (WebSocket, ADMIN)",
                 "parameters": [
                     {
                         "type": "integer",
@@ -449,9 +537,6 @@
             "type": "object",
             "properties": {
                 "email": {
-                    "type": "string"
-                },
-                "name": {
                     "type": "string"
                 },
                 "password": {
@@ -618,6 +703,13 @@
                     "type": "number"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
